# SMQTK-Dataprovider

./: .gitignore  .gitlab-ci.yml  .mypy.ini  CONTRIBUTING.md  MANIFEST.in  README.md  codecov.yml  pyproject.toml  pytest.ini  setup.py  sonar-project.properties
.github/workflows/: ci-unittests.yml  codeql.yml
docs/: conf.py  dataprovider.rst  index.rst  readthedocs-reqs.txt  release_notes.rst  sphinx_server.py
docs/release_notes/: pending_release.rst  v0.15.0.rst  v0.16.0.rst  v0.17.0.rst  v0.18.0.rst  v0.19.0.rst
requirements/: opt-girder.txt  opt-mimetype-magic.txt  opt-psql.txt  runtime.txt
smqtk_dataprovider/: __init__.py  content_type_validator.py  exceptions.py
smqtk_dataprovider/impls/data_element/: file.py  girder.py  hbase.py  matrix.py  memory.py  psql.py  url.py
smqtk_dataprovider/impls/data_set/: file.py  kvstore_backed.py  memory.py  psql.py
smqtk_dataprovider/impls/key_value_store/: memory.py  postgres.py
smqtk_dataprovider/interfaces/: data_element.py  data_set.py  key_value_store.py
smqtk_dataprovider/utils/: __init__.py  file.py  postgres.py  simple_timer.py  string.py
tests/: test_content_type_validator.py
tests/representation/DataElement/: test_DataElement_abstract.py  test_DataFileElement.py  test_DataMemoryElement.py  test_DataUrlElement.py  test_GirderDataElement.py  test_HBaseDataElement.py  test_MatrixDataElement.py  test_from_uri.py
tests/representation/DataSet/: test_DataSet_abstract.py  test_FileSet.py  test_MemorySet.py  test_kvstore_backed.py
tests/representation/KeyValueStore/: test_KeyValueStoreAbstract.py  test_MemoryKeyValueStore.py  test_PostgresKeyValueStore.py
tests/utils/: test_postgres.py  test_string_utils.py
tests/utils/file_utils/: test_file_mimetype_filemagic.py  test_safe_create_dir.py  test_safe_file_write.py
